 $ [#30511] Capitalise Custom output title (en-GB only). Thanks Brian Teeman
 # [#30537] Menus with default view in URL and sub-tasks are missing in other defined attributes and do not display correctly in menu type input in backend. Thanks Beat
 # [#30446] Fix Strict warning 'Attribute already exists'. Thanks Piotr Konieczny

11-Apr-2013 Jean-Marie Simonet
 #$ [#30534] Missing Help Button in Joomla! Update component. Thanks Mark Dexter

10-Apr-2013 Mark Dexter
 # [#30466] Tags: Not shown in contacts. Thanks Peter Bui.

08-Apr-2013 Michael Babker
 # [#29916] MySQL connections are not closed.  Thanks Ian Goldstein
 # [#30508] Fixed typo $text = $text = '..';.  Thanks Piotr Konieczny
 # [#30504] List All Tags doesn't have pagination.  Thanks Mark Dexter
 # [#30505] Weblink module ignores end publishing date.  Thanks Thomas Hunziker
 # [#30507] *Edit contact display issue with editor.  Thanks Jean-Marie Simonet

08-Apr-2013 Jean-Marie Simonet
 $ Adding installation language pt-PT
 # [#30503] *Tags :can't save Compact Layout in Tags Component Options

07-Apr-2013 Michael Babker
 ^ [#30502] Replace use of JRequest in com_media
 # [#30489] *Regression: Menu Type UTF8 Alias prevents display in Menu Items Manager in J3
 ^ [#30499] Duplicate "btn" class in login module button.  Thanks Thomas Hunziker
 # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate
 # [#30054] Catchable fatal error: Object of class stdClass could not be converted to string in /plugins/system/debug/debug.php on line 303.  Thanks Ryan K.

07-Apr-2013 Jean-Marie Simonet
 # [#30226] *TAGS: Getting rid of all aspects concerning lang associations

06-Apr-2013 Mark Dexter
 # [#30453] Tags: Pagination not working when linking to a tag.
 # [#30486] *Banners Manager:Banners and Banners Manager:Clients Status filter issue. Thanks Jean-Marie Simonet.
 # [#30480] com_contact error in admin->view->contacts search "author:xxxx". Thanks Brent Cordis.